# goit-pythonweb-hw-12

./: .coveragerc  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  l  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.db
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/src/conf/: config.rst
docs/source/src/database/: db.rst
docs/source/src/entity/: models.rst
docs/source/src/routes/: auth.rst  contacts.rst  users.rst
docs/source/src/services/: auth.rst  contacts.rst  user.rst
migrations/versions/: 191f6ddb1b41_add_password_reset_tokens.py  3477d2f5582f_add_role.py  7ea2edf4820b_init_project.py  941a67a41c37_add_avatar.py
src/conf/: config.py
src/core/: depend_service.py  email_token.py
src/entity/: __init__.py  models.py
src/repositories/: __init__.py  base.py  contacts_repository.py  password_reset_repository.py  refresh_token_repository.py  user_repository.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  contacts.py  email.py  password_reset.py  redis_service.py  upload_file_service.py  user.py
src/services/templates/: reset_password.html
tests/: __init__.py  conftest.py
tests/repositories/: test_base_repository.py  test_contacts_repository.py  test_password_reset_repository.py  test_refresh_token_repository.py  test_user_repository.py
tests/routes/: test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py
